# zero-network

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  HEADER-APACHE2  HEADER-GPL3  README.md  localSpec.json  makefile
.docker/: alphaville.Dockerfile  subzero-dev.Dockerfile  subzero.Dockerfile
.docker/chainspec/: rococo-local-raw.json  rococo-local.json  subzero-dev-genesis  subzero-dev-wasm  subzero-dev.json  subzero-stage-genesis  subzero-stage.json
.docker/local-relay-parachain/: README.md  docker-compose.yaml
.docker/local-relay-parachain/chainspec/: rococo-local.json  rococo-plain.json  rococo-raw.json  subzero-parachain-plain.json  subzero-parachain-raw.json  subzero.json
.docker/local-relay-parachain/wasm/: subzero-genesis  subzero-wasm
.docker/local-test-network/: docker-compose.yml
.github/ISSUE_TEMPLATE/: Bug.md  Epic.md
.github/workflows/: monthly-tag.yml  rust-clippy.yml  rust.yml
.maintain/: frame-weight-template.hbs
docker/: subzero.Dockerfile  zero_node.Dockerfile
frame/balances/: Cargo.toml
frame/balances/src/: lib.rs  migration.rs
frame/identity/: Cargo.toml
frame/identity/src/: lib.rs  migration.rs  types.rs
migration/identity/src/: lib.rs
migration/migration/: Cargo.toml
migration/migration/src/: lib.rs  migration.rs  mock.rs  tests.rs
modules/asset-registry/: Cargo.toml
modules/asset-registry/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
modules/drop/: Cargo.toml
modules/drop/src/: lib.rs
modules/migration/identity/: Cargo.toml
modules/migration/identity/src/: lib.rs
modules/migration/migration/: Cargo.toml
modules/primitives/: Cargo.toml
modules/primitives/src/: currency.rs  lib.rs
primitives/: Cargo.toml
primitives/src/: currency.rs  lib.rs
