[package]
name = "zero-primitives"
version = "1.28.0"
authors = ["zero collective <play@zero.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.103", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13"}

[dev-dependencies]
sp-serializer = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
pretty_assertions = "0.6.1"

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"frame-system/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
]
