[package]
name = "zero-primitives"
version = "1.28.0"
authors = ["zero collective <play@zero.io>"]
edition = "2018"

[dependencies]
bstringify = "0.1.2"
serde = { version = "1.0.136", optional = true }
scale-info = { version = "2.1", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
num_enum = { version = "0.5.1", default-features = false }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }

sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25"}
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25", default-features = false }

[dev-dependencies]
sp-serializer = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"num_enum/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-core/std",
	"sp-std/std",

	"frame-support/std",
]
