[package]
name = "zero-primitives"
version = "1.28.0"
authors = ["zero collective <play@zero.io>"]
edition = "2018"

[dependencies]
bstringify = "0.1.2"
serde = { version = "1.0.103", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
num_enum = { version = "0.5.1", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }

sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13"}
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }

[dev-dependencies]
sp-serializer = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
pretty_assertions = "0.6.1"

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"num_enum/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-core/std",
	"sp-std/std",

	"frame-support/std",
]
