[package]
authors = ["zero.io","gamedao.co"]
description = "Migration pallet"
edition = "2018"
license = "GPL-3.0-or-later"
name = "zero-migration"
repository = "https://github.com/gamedaoco/gamedao-protocol"
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] , default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }

serde = { version = "1.0.126", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.71", default-features = false, features = ["alloc"] }
bs58 = { version = "0.4.0", default-features = false, features = ["alloc"] }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.13" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.13" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate",  default-features = false , optional = true , branch = "polkadot-v0.9.13" }
pallet-identity = { default-features = false, path = "../identity" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.13" }
orml-tokens = { path = "../../orml/tokens", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.13" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.13" }
sp-io = { git = "https://github.com/paritytech/substrate",  default-features = false , branch = "polkadot-v0.9.13" }
sp-version = { git = "https://github.com/paritytech/substrate",  default-features = false , branch = "polkadot-v0.9.13" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.13" }

[dev-dependencies]
hex = "0.4.3"
rand = "0.8.5"
orml-currencies = { path = "../../orml/currencies", default-features = false }
orml-traits = { path = "../../orml/traits", default-features = false }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-identity/std",
	"pallet-balances/std",
	"orml-tokens/std"
]
