[package]
name = "module-asset-registry"
version = "0.1.0"
authors = ["zero.io","gamedao.co"]
edition = "2021"

[dependencies]
log = { version = "0.4.17", default-features = false }
serde = { version = "1.0.136", optional = true }
scale-info = { version = "2.1", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25", default-features = false  }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25", default-features = false, optional = true }
primitives = { package = "zero-primitives", path = "../primitives", default-features = false }

[dev-dependencies]
serde_json = "1.0.68"
hex = "0.4"
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }

[features]
default = ["std"]
std = [
	"serde",
	"log/std",
	"codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"primitives/std",
]
try-runtime = ["frame-support/try-runtime"]
runtime-benchmarks = ["frame-benchmarking"]
