[package]
name = "zero-primitives"
version = "2.0.0"
authors = ["zero collective <play@zero.io>"]
edition = "2021"

[dependencies]
bstringify = "0.1.2"
serde = { version = "1.0.143", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
num_enum = { version = "0.5.1", default-features = false }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36"}
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }

# frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }

[dev-dependencies]
sp-serializer = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"frame-system/std",
	"num_enum/std",
	"scale-info/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
	# "sp-std/std",

	# "frame-support/std",
]
