[package]
name = "zero-primitives"
version = "2.0.0"
authors = ["zero collective <play@zero.io>"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40"}
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40", default-features = false }

bstringify = "0.1.2"
serde = { version = "1.0.143", optional = true }
num_enum = { version = "0.5.1", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"frame-system/std",
	"num_enum/std",
	"scale-info/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
]
